--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -103,80 +103,14 @@
 
 	%------------------------------------------------
 	
-	\tableentrytwo{\textbf{Research}}{Design under uncertainty, additive manufacturing, multidisciplinary design optimization, and decision making using agent-based modeling}{}
+	\tableentrytwo{\textbf{Research}}{Design under uncertainty, remanufacturing, multidisciplinary design optimization}{}
 
-	\tableentrytwo{\textbf{Technical}}{}{}
-	\tableentrytwo{\textsc{Engineering systems}}{-~~Design for changeability and reliability, uncertainty quantification}{}
-	\tableentrytwo{}{-~~Analysis and allocation of design margins}{spaceafter}
-	\tableentrytwo{\textsc{Modeling and}}{-~~Finite element methods (thermomechanical, structural, electromagnetic)}{}
-	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods, system dynamics models}{spaceafter}
-	% \tableentrytwo{}{-~~System dynamics models}{spaceafter}
-	\tableentrytwo{\textsc{Optimization:}}{-~~Blackbox and derivative-free optimization (mesh-adaptive direct search)}{}
-	% \tableentrytwo{}{-~~Multidisciplinary optimization (Non-hierarchical analytical target cascading)}{}
-	\tableentrytwo{}{-~~Stochastic optimization}{spaceafter}
-	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning (recurrent neural networks)}{}
-	\tableentrytwo{}{-~~Hyperparameter optimization}{spaceafter}
+	\tableentrytwo{\textbf{Technical}}{Numerical simulation, optimization, statistical modeling, machine learning}{}
 
-	\tableentrytwo{\textbf{Software}}{MATLAB/Simulink, Python (pandas, PyTorch, matplotlib, flask), C++ (CUDA, OpenMP, Qt)}{}
-	\tableentrytwo{}{R (ggplot2, tidyverse), mySQL, FEA (Abaqus, ANSYS), CAD (SOLIDWORKS, NX Siemens), DAQ (NI LabVIEW)}{}
+	\tableentrytwo{\textbf{Software}}{MATLAB/Simulink, Python, C++, R, mySQL, Abaqus, NX Siemens}{}
 
 	%------------------------------------------------
 	
-\end{supertabular}
-
-%----------------------------------------------------------------------------------------
-%	EDUCATION
-%----------------------------------------------------------------------------------------
-
-\section{Education} 
-
-% Blank \educationentry{} command to add another degree:
-
-%\educationentry{} % Duration
-%{} % Degree
-%{} % Honours, achievements or distinctions (e.g. first class honours)
-%{} % Department
-%{} % Institution
-
-% All 5 parameters must be supplied but any can be empty if you don't need them
-
-%------------------------------------------------
-
-\begin{supertabular}{>{\raggedleft\arraybackslash}p{0.17\linewidth}p{0.6\linewidth}>{\raggedleft\arraybackslash}p{0.17\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
-
-	%------------------------------------------------
-
-	\educationentry{Jan 2017 -- Dec 2020} % Duration
-	{Doctor of Philosophy} % Degree
-	{CGPA: 4.00} % Honours, achievements or distinctions (e.g. first class honours)
-	{Mechanical Engineering} % Department
-	{McGill University} % Institution
-	{}
-	\tableentrythree{Concentraion}{Engineering design and optimization}{}{}
-	\tableentrythree{Dissertation}{\textit{Optimization driven set-based design under uncertain requirements}}{}{spaceafter}
-	%------------------------------------------------
-
-	\educationentry{Aug 2013 -- Dec 2015} % Duration
-	{Master of Science} % Degree
-	{CGPA: 4.00} % Honours, achievements or distinctions (e.g. first class honours)
-	{Mechanical Engineering} % Department
-	{Khalifa University} % Institution
-	{}
-	\tableentrythree{Concentraion}{Instrumentation and photonics}{}{}
-	\tableentrythree{Dissertation}{\textit{Internal corrosion detection of oil and gas pipelines using fiber optics}}{}{spaceafter}
-	
-	%------------------------------------------------
-
-	\educationentry{Aug 2009 -- June 2013} % Duration
-	{Bachelor of Science} % Degree
-	{First Class Honours, CGPA: 3.97} % Honours, achievements or distinctions (e.g. first class honours)
-	{Mechanical Engineering} % Department
-	{Khalifa University} % Institution
-	{}
-	\tableentrythree{Capstone project}{\textit{Development of a human operated mobile hexapod platform}}{}{}
-	
-	%------------------------------------------------
-
 \end{supertabular}
 
 %----------------------------------------------------------------------------------------
@@ -209,11 +143,8 @@
 	{Montr\'{e}al, Canada} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Won a Natural Sciences and Engineering Research Council of Canada (NSERC) fellowship to pursue research at UdeM.}{}
-	\tableentry{$\bullet$}{Work with the International Air Transport Association (IATA) to develop data analytics solutions for codesharing and flight scheduling in the civil aviation industry.}{}
-	\tableentry{$\bullet$}{Assess the effectiveness and impact of the IATA operation safety audit (IOSA) on air travel accessibility and cooperation between airlines.}{}
-	\tableentry{$\bullet$}{Construct a mariaDB mySQL database for storing flight records spanning the last decade for research purposes.}{}
-	\tableentry{$\bullet$}{Leverage unsupervised learning and expectation maximization algorithms to discover latent variables in the IATA dataset using R, Python, and Julia packages.}{spaceafter}
+	\tableentry{$\bullet$}{Analyze IATA data involving \textbf{25M flight schedules} using graph representation learning.}{}
+	\tableentry{$\bullet$}{Develop community detection algorithms for graphs with over \textbf{10K nodes} and \textbf{100K edges}.}{}
 	
 	%------------------------------------------------
 	
@@ -223,9 +154,32 @@
 	{Montr\'{e}al, Canada} % Location
 	{Adjunct Lecturer} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Was the sole instructor of the Engineering System Optimization course (MECH559).}{}
-	\tableentry{$\bullet$}{Developed Python notebooks as teaching aids for the students to understand the implementation of modern optimization algorithms \href{https://github.com/khbalhandawi/MECH559_notebooks/tree/master}{https://github.com/khbalhandawi/MECH559\_notebooks}.}{}
-	\tableentry{$\bullet$}{Modernized the course to use the latest optimization and machine learning tools.}{}
+	\tableentry{$\bullet$}{Was the sole instructor of the Engineering Systems Optimization course (MECH559).}{}
+	\tableentry{$\bullet$}{Developed \href{https://github.com/khbalhandawi/MECH559_notebooks/tree/master}{Python notebooks} as teaching aids for the students to understand the implementation of modern optimization algorithms and recieved an engagment rate of \textbf{70\%} with the students.}{}
+
+	%------------------------------------------------
+
+	\workposition{Jan 2021 -- Apr 2022} % Duration
+	{} % FT/PT (full time or part time)
+	{} % Employer
+	{} % Location
+	{Postdoctoral Researcher} % Job title
+	{}{} % Description
+	\tableentry{$\bullet$}{Developed a hyperparameter optimization framework for machine learning based on direct search.}{}
+	\tableentry{$\bullet$}{Developed \href{https://covid-forecaster-lebanon.herokuapp.com/}{deep learning COVID-19 forecasting models} with \textbf{7-day} forecast window and an accuracy of \textbf{$\pm$50 daily cases}.}{}
+	\tableentry{$\bullet$}{Developed a mechanistic \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{COVID-19 model} with GPU acceleration with a \textbf{1000X} performance enhancment relative to state-of-the-art epidemic simulators.}{}
+
+	%------------------------------------------------
+
+	\workposition{Jan 2017 -- Jan 2021} % Duration
+	{} % FT/PT (full time or part time)
+	{} % Employer
+	{} % Location
+	{Research assistant} % Job title
+	{}{}  % Description
+	\tableentry{$\bullet$}{Developed mathematical frameworks and \href{https://github.com/khbalhandawi/scale_AM_webapp}{software} for design space exploration and optimization achieving a \textbf{99.8\% reduction} in the effort to explore a 4-dimensional design space.}{}
+	\tableentry{$\bullet$}{Participated in a \href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{technology transfer} at GKN Aerospace and provided Python training.}{}
+	\tableentry{$\bullet$}{Resulted in the \textbf{\href{https://www.gknaerospace.com/en/our-technology/2022/additive-manufacturing-research-paper-receives-journal-of-mechanical-design-award/}{best paper}} award by the ASME Journal of Mechanical Design in 2021.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -235,134 +189,91 @@
 	{G\"{o}teborg, Sweden} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED lab.}{}
-	\tableentry{$\bullet$}{Authored a Python library for performing margin and change propagation management in engineering systems: \href{https://sed-group.github.io/mvmlib/index.html}{https://sed-group.github.io/mvmlib/index.html}.}{}
-	\tableentry{$\bullet$}{Conduct research into design margins and links to probabilistic quantities such as reliability.}{}
-	\tableentry{$\bullet$}{Foster collaborations with the industry (GKN Aerospace) and write research proposals.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{Jan 2021 -- Apr 2022} % Duration
-	{} % FT/PT (full time or part time)
-	{Systems Optimization Lab, McGill University} % Employer
-	{Montr\'{e}al, Canada} % Location
-	{Postdoctoral Researcher} % Job title
-	{}{} % Description
-	\tableentry{$\bullet$}{Developed a deep learning forecasting model for COVID-19 trajectories based on cross-sectional patient data. The forecasting model is a sequence-to-sequence model that uses encoder and decoder RNNs with attention to transform cross-sectional patient data to a COVID-19 trajectory.}{}
-	\tableentry{$\bullet$}{Deployed the trained forecasting model online as a {Flask} application: \href{https://covid-forecaster-lebanon.herokuapp.com/}{https://covid-forecaster-lebanon.herokuapp.com/}.}{}
-	\tableentry{$\bullet$}{Applied novel stochastic optimization techniques for hyperparameter optimization problems in machine learning and used them to fine tune the sequence-to-sequence model.}{}
-	\tableentry{$\bullet$}{Built and published a stochastic model of the spread of COVID-19 in a population using artificial life models (agent-based approaches) and used stochastic optimization algorithms to solve for optimal public health policies \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{https://github.com/khbalhandawi/COVID\_SIM\_GPU}.}{}
-	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization (NoHiMDO) with applications to aircraft design.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{Jan 2017 -- Jan 2021} % Duration
-	{} % FT/PT (full time or part time)
-	{McGill University} % Employer
-	{Montr\'{e}al, Canada} % Location
-	{Research assistant} % Job title
-	{}{}  % Description
-	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) grant (56,000 CAD).}{}
-	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
-	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes using transient coupled thermal/mechanical FEA simulations.}{}
-	\tableentry{$\bullet$}{Write automation scripts using NX Siemens and Abaqus Python APIs to automate geometry generation, meshing, anaylsis, and postprocessing of parametric simulations.}{}
-	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
-	\tableentry{$\bullet$}{Used machine learning models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements by using a Jacobian matrix.}{}
-	\tableentry{$\bullet$}{Authored a {Flask} application for conducting sensitivity and scalability studies on design of experiments data:
-	\href{https://github.com/khbalhandawi/scale_AM_webapp}{https://github.com/khbalhandawi/scale\_AM\_webapp}.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{June 2017 -- Jan 2020} % Duration
-	{} % FT/PT (full time or part time)
-	{GKN Aerospace Engine Systems} % Employer
-	{Trolh\"{a}ttan, Sweden} % Location
-	{Visiting researcher} % Job title
-	{}{}  % Description
-	\tableentry{$\bullet$}{Participated in a technology transfer to translate my research on optimization into industrial practice by provided training modules and workshops to GKN engineers (MATLAB and Python).}{}
-	\tableentry{$\bullet$}{Surveyed GKN engineers about their experience designing areoengine components for engine system manufacturers to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexibility and robustness.}{}
-	\tableentry{$\bullet$}{Set up advanced design automation and exploration tools to be used as part of GKN's workflow (engineering workbench) by integrated parametric design software (NX Siemens) with simulation software (Abaqus and ANSYS) to evaluate hundreds of concepts for a turbine rear frame.}{spaceafter}
+	\tableentry{$\bullet$}{Authored a \href{https://sed-group.github.io/mvmlib/index.html}{Python library} for margin and change propagation management in engineering systems.}{}
+	\tableentry{$\bullet$}{Used said library in design space exploration to concurrently develop and analyze \textbf{6,552 conceptual designs} of an aeroengine component.}{spaceafter}
 
 	%------------------------------------------------
 
 	\workposition{Dec 2016} % Duration
 	{} % FT/PT (full time or part time)
-	{Center for Autonomous Robotic Systems, Khalifa University} % Employer
+	{Khalifa University} % Employer
 	{Abu Dhabi, UAE} % Location
-	{Visiting researcher} % Job title
+	{Visiting researcher, Center for Autonomous Robotic Systems} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Performed sensor fusion research for unmanned aerial vehicle (UAV) control and maneuvering.}{}
-	\tableentry{$\bullet$}{Fused UAV inertial measurement unit (IMU) data with high latency positioning measurements from an Optitrack motion capture system to obtain smooth high frequency attitude estimates suitable for control applications.}{}
-	\tableentry{$\bullet$}{Used the principles of quaternion transformation to translate observed attitude in the IMU reference frame to an inertial reference frame.}{}
-	\tableentry{$\bullet$}{Repurposed a DJI Wind 4 UAV for firefighting by redesigning the drone platform to carry an extinguishant payload.}{}
-	\tableentry{$\bullet$}{Co-authored a paper based on the repurposed UAV to be published in a special issue of the Journal of Field Robotics.}{spaceafter}
+	\tableentry{$\bullet$}{Reverse engineer a UAV for firefighting and carrying an extinguishant payload of \textbf{6 litres}.}{}
+	\tableentry{$\bullet$}{Achieved a flight time of \textbf{18 minutes} and resisting winds with speeds upto \textbf{8m/s}.}{}
 
 	%------------------------------------------------
 
 	\workposition{Aug 2013 -- Dec 2016} % Duration
 	{} % FT/PT (full time or part time)
-	{Asset Integrity Management Systems Lab, Khalifa University} % Employer
-	{Abu Dhabi, UAE} % Location
-	{Research Assistant} % Job title
+	{} % Employer
+	{} % Location
+	{Research Assistant, Asset Integrity Management Systems Lab} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Developed fiber optic sensors for monitoring mechanical and electrochemical phenomena such as strain, temperature, and corrosion.}{}
-	\tableentry{$\bullet$}{Used optical time-domain reflectometery for distributed fiber optic sensing of large structures such as oil pipelines.}{}
-	\tableentry{$\bullet$}{Worked with fiber Bragg grating sensors for localized measurements of strain and temperature and their subsequent translation into corrosion rate.}{}
-	\tableentry{$\bullet$}{Established a correlation between photoelastic properties of various waveguides (distrubuted and localized sensors) and the corrosion rate in oil and gas structures.}{}
-	\tableentry{$\bullet$}{Simulated photonic corrosion sensors in MATLAB and Abaqus for sensor design and calibration.}{}
-	\tableentry{$\bullet$}{Developed a novel accelerated corrosion testing setup based on electrochemical cells for validating and verifiying the proposed corrosion sensors and establishing the calibration curve.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{May 2014 -- May 2015} % Duration
-	{} % FT/PT (full time or part time)
-	{Khalifa University} % Employer
-	{Abu Dhabi, UAE} % Location
-	{Khalifa university Baja SAE team leader} % Job title
-	{}{}  % Description
-	\tableentry{$\bullet$}{Led the first UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
-	\tableentry{$\bullet$}{Guided the assembly team on integrating vehicle subsystems (chassis, suspension, and power train).}{}
-	\tableentry{$\bullet$}{Performed structural optimization on vehicle chassis using MATLAB and ANSYS.}{}
-	\tableentry{$\bullet$}{Provided workshops on finite elemenet anaylsis and computer aided design to team members.}{}
-	\tableentry{$\bullet$}{Prepared assembly and part drawings for the manufacturing team.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{Jan 2018 -- Dec 2019} % Duration
-	{} % FT/PT (full time or part time)
-	{McGill University} % Employer
-	{Montr\'{e}al, Canada} % Location
-	{Teaching assistant} % Job title
-	{}{}  % Description
-	\tableentry{$\bullet$}{Mechanical lab course – Prepared lab manuals, conducted labs, graded student reports, and incorporated MATLAB programming exercises into the syllabus.}{}
-	\tableentry{$\bullet$}{Engineering Professional Practice course – Conducted town halls, hosted guest lecturers, provided feedback to students, and gave several talks about entrepreneurship.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{Aug 2013 -- Dec 2015} % Duration
-	{} % FT/PT (full time or part time)
-	{Khalifa University} % Employer
-	{Abu Dhabi, UAE} % Location
-	{Teaching Assistant} % Job title
-	{}{}  % Description
-	\tableentry{$\bullet$}{System dynamics and controls course – Conducted lab sessions and held office hours.}{}
-	\tableentry{$\bullet$}{Computer aided design – Conducted computer lab sessions.}{}
-	\tableentry{$\bullet$}{Mentored undergraduate students participating in the Abu Dhabi Solar Challenge.}{}
-	\tableentry{$\bullet$}{Co-mentored an undergraduate capstone project.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{Aug 2012 -- May 2012} % Duration
-	{} % FT/PT (full time or part time)
-	{Yokogawa} % Employer
-	{Abu Dhabi, UAE} % Location
-	{Engineering intern} % Job title
-	{}{}  % Description
-	\tableentry{$\bullet$}{Wrote programs for industrial plant operation and control using distributed control systems.}{}
-	\tableentry{$\bullet$}{Visited the main headquarters in Japan to represent the Abu Dhabi National Oil Company.}{}
+	\tableentry{$\bullet$}{Developed fiber optic structural monitoring sensors for mitigating upto \textbf{\$1M of corrosion costs}.}{}
+	\tableentry{$\bullet$}{Developed a new accelerated corrosion testing setup to simulate \textbf{2 years of corrosion in 2 hours}.}{}
+	\tableentry{$\bullet$}{Mentored capstone students to build and control a \textbf{300 kg} hydraulic robot manipulator.}{spaceafter}
 
 	%------------------------------------------------
 	
+\end{supertabular}
+
+
+%----------------------------------------------------------------------------------------
+%	EDUCATION
+%----------------------------------------------------------------------------------------
+
+\section{Education} 
+
+% Blank \educationentry{} command to add another degree:
+
+%\educationentry{} % Duration
+%{} % Degree
+%{} % Honours, achievements or distinctions (e.g. first class honours)
+%{} % Department
+%{} % Institution
+
+% All 5 parameters must be supplied but any can be empty if you don't need them
+
+%------------------------------------------------
+
+\begin{supertabular}{>{\raggedleft\arraybackslash}p{0.17\linewidth}p{0.6\linewidth}>{\raggedleft\arraybackslash}p{0.17\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
+
+	%------------------------------------------------
+
+	\educationentry{Jan 2017 -- Dec 2020} % Duration
+	{Doctor of Philosophy} % Degree
+	{CGPA: 4.00} % Honours, achievements or distinctions (e.g. first class honours)
+	{Mechanical Engineering} % Department
+	{McGill University} % Institution
+	{}
+	\tableentrythree{Concentraion}{Engineering design and optimization}{}{}
+	\tableentrythree{Dissertation}{\textit{Optimization driven set-based design under uncertain requirements}}{}{spaceafter}
+	
+	%------------------------------------------------
+	
+	\educationentry{Aug 2013 -- Dec 2015} % Duration
+	{Master of Science} % Degree
+	{CGPA: 4.00} % Honours, achievements or distinctions (e.g. first class honours)
+	{Mechanical Engineering} % Department
+	{Khalifa University} % Institution
+	{}
+	\tableentrythree{Concentraion}{Instrumentation and photonics}{}{}
+	\tableentrythree{Dissertation}{\textit{Internal corrosion detection of oil and gas pipelines using fiber optics}}{}{spaceafter}
+	
+	%------------------------------------------------
+
+	\educationentry{Aug 2009 -- June 2013} % Duration
+	{Bachelor of Science} % Degree
+	{First Class Honours, CGPA: 3.97} % Honours, achievements or distinctions (e.g. first class honours)
+	{Mechanical Engineering} % Department
+	{Khalifa University} % Institution
+	{}
+	\tableentrythree{Capstone project}{\textit{Development of a human operated mobile hexapod platform}}{}{}
+	
+	%------------------------------------------------
+
 \end{supertabular}
 
 %----------------------------------------------------------------------------------------
@@ -413,19 +324,13 @@
 \begin{supertabular}{>{\raggedright\arraybackslash}p{0.77\linewidth}>{\raggedleft\arraybackslash}p{0.19\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
 	
 	%------------------------------------------------
-	
-	\tableentryraw{Our \href{http://dx.doi.org/10.1115/1.4047908}{paper on scalable designs} was selected for the 2021 ASME Journal of Mechanical Design Editor's Choice award}{\textsc{ASME IDETC 2022, St.~Louis, USA}}{spaceafter}
 
-	\tableentryraw{Awarded 2nd place for final problem presentation and winner of best data visualization in the 11th Montreal Industreal Problem Solving Workshop}{\textsc{IVADO, Montreal, Canada}}{spaceafter}
+	\tableentryraw{\textbf{Winner of best data visualization} and was ranked \textbf{2nd for best presentation} in the 11th Montreal Industrial Problem Solving Workshop}{\textsc{IVADO, Montreal, Canada}}{spaceafter}
 
-	\tableentryraw{Team leader of the first UAE team to successfully qualify and complete the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
+	\tableentryraw{Led the first UAE team to successfully qualifying and competing in the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
 
-	\tableentryraw{Awarded 2nd place in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
+	\tableentryraw{Awarded \textbf{2nd place} in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
 
-	\tableentryraw{Recognition for volunteering for the graduate School and student affair's events}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
-
-	\tableentryraw{Graduated honors with distinction (2,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
-	
 	%------------------------------------------------
 	
 \end{supertabular}
@@ -434,7 +339,7 @@
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
 
-\section{Publications}
+\section{Selected publications}
 
 % Example \longformdescription{} command to add another publication:
 
@@ -449,50 +354,11 @@
 
 %------------------------------------------------
 
-\textbf{\large Refereed Journal Articles}\medskip \hrule \medskip
-
-\longformpublication{A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Chamseddine and M. Kokkolaras (2022). Weekly nowcasting of new COVID-19 cases using past viral load measurements. \textit{Viruses}, \textit{14}(7): pp 1414. \href{https://www.mdpi.com/1999-4915/14/7/1414}{doi: 10.3390/V14071414}}
-
 \longformpublication{\textbf{K. Al Handawi} and M. Kokkolaras (2021). Optimization of infectious disease prevention and control policies using artificial life. \textit{IEEE Transactions on Emerging Topics in Computational Intelligence}, \href{https://doi.org/10.1109/TETCI.2021.3107496}{doi: 10.1109/TETCI.2021.3107496}
 ~\textit{funded by an NSERC discovery grant}}
 
-\longformpublication{\textbf{K. Al Handawi}, M. Panarotto, P. Andersson, O. Isaksson and M. Kokkolaras (2021). Optimization of design margins allocation when making use of additive remanufacturing. \textit{Journal of Mechanical Design}, \textit{144}(1): pp 012001. \href{https://doi.org/10.1115/1.4051607}{doi: 10.1115/1.4051607}\\
-\textit{funded partially by NSERC, FRQNT, CARIC and EU Horizon 2020 research and innovation programme}}
-
-\longformpublication{M. Chehadeh, M. Wahbah, M. Awad, O. AbdulHay, \textbf{K. Al Handawi}, L. Seneviratne, I. Greatbatch and Y. Zweiri (2021). Novel aerial firefighting system for suppression of incipient cladding fires. \textit{Journal of Field Robotics}, (\textit{In Press})\\
-\textit{funded by Emaar Properties PJSC}}
-
 \longformpublication{\textbf{K. Al Handawi}, P. Andersson, M. Panarotto, O. Isaksson and M. Kokkolaras (2020). Scalable set-based design optimization and remanufacturing for meeting changing requirements. \textit{Journal of Mechanical Design}, \textit{143}(2): pp 021702. \href{http://dx.doi.org/10.1115/1.4047908}{doi: 10.1115/1.4047908}\\
 \textit{funded partially by NSERC, FRQNT, CARIC and EU Horizon 2020 research and innovation programme}}
-
-\longformpublication{\textbf{K. Al Handawi}, N. Vahdati, O. Shiryayev and L. Lawand (2017). Analytical modeling tool for design of hydrocarbon sensitive optical fibers. \textit{Sensors}, \textit{17}(10): pp 2227. \href{http://dx.doi.org/10.3390/s17102227}{doi: 10.3390/s17102227}\\
-\textit{funded by Abu Dhabi National Oil Company}}
-
-\longformpublication{L. Lawand, O. Shiryayev, \textbf{K. Al Handawi}, N. Vahdati and P. Rostron (2017). Corrosivity sensor for exposed pipelines based on wireless energy transfer. \textit{Sensors}, \textit{17}(6): pp 1238. \href{http://dx.doi.org/10.3390/s17061238}{doi: 10.3390/s17061238}\\
-\textit{funded by Abu Dhabi National Oil Company}}
-
-\longformpublication{\textbf{K. Al Handawi}, N. Vahdati, P. Rostron, L. Lawand and O. Shiryayev (2016). Strain-based FBG sensor for real-time corrosion rate monitoring in pre-stressed structures. \textit{Sensors and Actuators B: Chemical}, \textit{236}: pp 276 -- 285. \href{http://dx.doi.org/10.1016/j.snb.2016.05.167}{doi: 10.1016/j.snb.2016.05.167}\\
-\textit{funded by Abu Dhabi National Oil Company}}
-
-%------------------------------------------------
-
-\textbf{\large Conference Papers}\medskip \hrule \medskip
-
-\longformpublication{\textbf{K. Al Handawi}, P. Andersson, M. Panarotto, O. Isaksson and M. Kokkolaras (2020). Scalable set-based design optimization and remanufacturing for meeting changing requirements. \textit{in Proceedings of the International Design Engineering Technical Conferences \& Computers and Information in Engineering Conference}, Virtual conference, IDETC2020.}
-
-\longformpublication{L. Lawand, \textbf{K. Al Handawi}, M. Panarotto, P. Andersson, O. Isaksson and M. Kokkolaras (2019). A lifecycle cost-driven system dynamics approach for considering additive re-manufacturing or repair in aero-engine component design. \textit{in Proceedings of the Design Society: International Conference on Engineering Design}, Delft, Netherlands, ICED19: pp 1343 -- 1352. \href{http://dx.doi.org/10.1017/dsi.2019.140}{doi: 10.1017/dsi.2019.140}}
-
-\longformpublication{\textbf{K. Al Handawi}, N. Vahdati, O. Shiryayev, and L. Lawand (2016). Corrosion monitoring along infrastructures using distributed fiber optic sensing. \textit{in Proceedings of SPIE Smart Structures/NDE, International Society for Optics and Photonics, Sensors and Smart Structures Technologies for Civil, Mechanical, and Aerospace Systems}, Las Vegas, USA, SPIE2016. \href{http://dx.doi.org/10.1117/12.2218820}{doi: 10.1117/12.2218820}}
-
-\longformpublication{L. Lawand, O. Shiryayev, \textbf{K. Al Handawi}, N. Vahdati and P. Rostron (2016). Corrosivity monitoring system using RFID-based sensors. \textit{in Proceedings of SPIE Smart Structures/NDE, International Society for Optics and Photonics, Sensors and Smart Structures Technologies for Civil, Mechanical, and Aerospace Systems}, Las Vegas, USA, SPIE2016. \href{http://dx.doi.org/10.1117/12.2218813}{doi: 10.1117/12.2218813}}
-
-%------------------------------------------------
-
-% \textbf{\large Poster presentations}\medskip \hrule \medskip
-
-% \longformpublication{\textbf{K. Al Handawi}, P. Andersson, O. Isaksson and M. Kokkolaras (2019). Scalable set-based design solutions for product remanufacturing. \textit{International Conference on Engineering Design}, Delft, Netherlands, ICED19.}
-
-% \longformpublication{\textbf{K. Al Handawi}, L. Lawand, T. Hitchcox, Y. F. Zhao and M. Kokkolaras (2018). Additive manufacturing optimization and simulation platform for repairing and remanufacturing of aerospace components. \textit{CRIAQ RDV Forum}, Montr\'{e}al, Canada.}
 
 %------------------------------------------------
 
