--- a/structure.tex
+++ b/structure.tex
@@ -37,11 +37,13 @@
 %	DOCUMENT MARGINS
 %----------------------------------------------------------------------------------------
 
-\usepackage{geometry} % Required for adjusting page dimensions and margins
+\usepackage[bottom=0.1in]{geometry} % Required for adjusting page dimensions and margins
 
 \geometry{
-	hmargin=1.5cm, % Horizontal margin
-	vmargin=1.75cm, % Vertical margin
+	left=1.5cm,
+	right=1.5cm,
+	top=1.75cm,
+	bottom=0.0cm,
 	letterpaper, % Paper size, change to letterpaper for US letter size
 	%showframe, % Uncomment to show how the type block is set on the page -- typically for debugging
 }
@@ -85,7 +87,7 @@
 	Scale=0.95,
     ]{Latin Modern Roman}
 
-\newfontfamily\cvlangfont{Courier New} % Create a new font family for programming languages
+\newfontfamily\cvlangfont{DejaVu Sans} % Create a new font family for programming languages
 
 \newfontfamily{\FA}[Path=fonts/]{FontAwesome} % Create a new font family for FontAwesome icons, provided with the template in the fonts folder
 \input{fonts/fontawesomesymbols-xeluatex.tex} % Load a file to create shortcuts to the icons, see icon examples and their shortcuts in fontawesome.pdf in the fonts folder
