Update CV with UdeM and Chalmers experience

--- a/Khalil_resume.tex
+++ b/Khalil_resume.tex
@@ -80,7 +80,7 @@
 %	 ABOUT ME
 %----------------------------------------------------------------------------------------
 
-\aboutme{I am a researcher with 4 years of experience in simulation-based design, optimization, and high-performance computing. I enjoy working with large multidisciplinary teams and projects and love the prospect of mentoring and supervising other aspiring engineers.} % To have no About Me section, just remove all the text and leave \aboutme{}
+\aboutme{I am a researcher with 6 years of experience in simulation-based design, optimization, and high-performance computing. I enjoy working with large multidisciplinary teams and projects and love the prospect of mentoring and supervising other aspiring engineers.} % To have no About Me section, just remove all the text and leave \aboutme{}
 
 %----------------------------------------------------------------------------------------
 %	 EDUCATION
@@ -250,32 +250,6 @@
 
 \vspace{-\baselineskip} % Standardise the whitespace after this section and before the next (the custom command adds too much otherwise)
 
-\section{Research}
-
-{\raggedright\textbf{``Optimization of infectious disease prevention policies using agent-based modeling"}}
-
-\textsc{Research question:} \textit{ How can we apply the principles of design and decision-making to help bring the pandemic under control?}
-
-\textsc{Outcomes:}\vspace{-0.5em} \programlang{\color{magenta}}{C++}~\programlang{\color{cuda}}{CUDA}~\programlang{\color{python}}{python}~\programlang{\color{qt}}{Qt}~\round{\href{https://github.com/khbalhandawi/COVID_SIM}{\small\faGlobe~Open-source code}}{proglang}\\[1pt]
-
-$\bullet$ Epiodomological model based on intelligent agents that can model \textbf{complex social systems}\\[1pt]
-$\bullet$ Optimal health policies to keep the disease in check\\[1pt]
-$\bullet$ GPU-accelerated agent-based simulation at least \textbf{100X} faster than CPU simulations\\[1pt]
-$\bullet$ Policies with socio-economic impact that is \textbf{5 times less} than that of a complete lock-down
-
-\medskip % Extra whitespace before the next section
-
-{\raggedright\textbf{``Optimization-driven set-based design for dynamic design requirements"}}
-
-\textsc{Research question:} \textit{How do you design a component when the design requirements can change at any moment and without advance notice?}
-
-\textsc{Outcomes:}\vspace{-0.5em} \programlang{\color{python}}{python}~\programlang{\color{magenta}}{C++}~\programlang{\color{matlab}}{MATLAB}~\programlang{\color{rpackage}}{R}~\round{\href{https://github.com/khbalhandawi/DM_SBD_opt}{\small\faGlobe~Open-source code}}{proglang}~\round{\href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{\small\faGlobe~Online news article}}{proglang}\\[1pt]
-
-$\bullet$ \textbf{Design metrics} for qualitative descriptions such as flexibility and robustness\\[1pt]
-$\bullet$ Machine learning model to \textbf{encode expensive structural simulations}\\[1pt]
-$\bullet$ Inference engine for generating \textbf{thousands} of feasible conceptual designs\\[1pt]
-$\bullet$ Technology transfer at GKN aerospace to help \textbf{shorten product lead times}
-
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
@@ -294,40 +268,84 @@ $\bullet$ Technology transfer at GKN aerospace to help \textbf{shorten product l
 
 %------------------------------------------------
 
-\workposition{Current, from Jan 2021} % Duration
-{FT} % FT/PT (full time or part time)
-{Systems Optimization Lab, McGill University} % Employer
+\workposition{Current, from May 2022} % Duration
+{} % FT/PT (full time or part time)
+{Universit\'{e} de Montr\'{e}al} % Employer
+{Montr\'{e}al, Canada} % Location
+{Postdoctoral Researcher, Computer Science and Operations Research} % Job title
+{
+	$\bullet$ Analyze IATA data involving \textbf{25M flight schedules} using graph representation learning.\\
+	$\bullet$ Develop community detection algorithms for graphs with over \textbf{10K nodes} and \textbf{100K edges}.\\
+	$\bullet$ Organize flight schedule data into a mySQL database for  archival, and retrieval of data.\\
+	\textsc{Tools:}\programlang{\color{mySQL}}{mySQL}~\programlang{\color{rpackage}}{R}
+} % Description
+{spaceafter}
+
+%------------------------------------------------
+
+\workposition{Sep 2022 -- Dec 2022} % Duration
+{} % FT/PT (full time or part time)
+{Department of Mechanical Engineering, McGill University} % Employer
+{Montr\'{e}al, Canada} % Location
+{Adjunct Lecturer} % Job title
+{
+	$\bullet$ Was the sole instructor of the Engineering Systems Optimization course (MECH559).\\
+	$\bullet$ Developed \href{https://github.com/khbalhandawi/MECH559_notebooks/tree/master}{Python notebooks} as teaching aids for the students to understand the implementation of modern optimization algorithms and recieved an \textbf{engagement rate of 70\%} with the students.\\
+	$\bullet$ Hosted \textbf{2 guest} lectures with aerospace professionals to demo optimization applications.\\
+	\textsc{Tools:} \programlang{\color{python}}{Python}~\programlang{\color{matlab}}{MATLAB}~\round{\href{https://github.com/khbalhandawi/MECH559_notebooks/tree/master}{\small\faGlobe~Python notebooks}}{proglang}
+} % Description
+{}
+
+%------------------------------------------------
+
+\workposition{Jan 2021 -- Apr 2022} % Duration
+{} % FT/PT (full time or part time)
+{} % Employer
+{} % Location
 {Postdoctoral Researcher} % Job title
 {
-	$\bullet$ Built and implemented a COVID-19 predictive model in a time of uncertainty.\\
-	$\bullet$ Came up with a project for students to understand multidisciplinary optimization.
-} % Description
+	$\bullet$ Research simulation-based decision-making in public health and policy making during epidemics.\\
+	$\bullet$ Developed \href{https://covid-forecaster-lebanon.herokuapp.com/}{deep learning COVID-19 forecasting models} with an accuracy of \textbf{$\pm$50 daily cases}.\\
+	$\bullet$ Developed a hyperparameter optimization framework for machine learning based on direct search.\\
+	$\bullet$ Develop GPU accelerated \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{epidemic models} for high simulation throughput (\textbf{100X }).\\
+	\textsc{Tools:} \programlang{\color{magenta}}{C++}~\programlang{\color{cuda}}{CUDA}~\programlang{\color{python}}{Python}~\programlang{\color{qt}}{Qt}~\round{\href{https://github.com/khbalhandawi/COVID_SIM}{\small\faGlobe~Open-source code}}{proglang}~\round{\href{https://covid-forecaster-lebanon.herokuapp.com/}{\small\faGlobe~Web application}}{proglang}
+}
+{} % Description
 
 %------------------------------------------------
 
-\workposition{Jan 2017 -- Dec 2020} % Duration
-{FT} % FT/PT (full time or part time)
-{McGill University} % Employer
-{Research and teaching assistant} % Job title
+\workposition{Jan 2017 -- Jan 2021} % Duration
+{} % FT/PT (full time or part time)
+{} % Employer
+{} % Location
+{Research assistant} % Job title
 {
-	$\bullet$ Came up with new ways to teach programming skills to engineering students.\\
-	$\bullet$ Used design optimization and set-based design to give designers a competitive edge.
-}  % Description
+	$\bullet$ Part of \textbf{Canadian/European industrial project} investigating additive repair technologies for aeroengine parts. I focused on optimization of aerospace design for AM remanufacturing.\\
+	$\bullet$ Developed mathematical tools and \href{https://github.com/khbalhandawi/scale_AM_webapp}{software} for design space exploration and optimization achieving a \textbf{99.8\% reduction} in effort to explore a 4D design space relative to full factorial design.\\
+	$\bullet$ Participated in a \href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{technology transfer} at GKN Aerospace, providing Python training on said tools.\\
+	$\bullet$ Resulted in the \textbf{\href{https://www.gknaerospace.com/en/our-technology/2022/additive-manufacturing-research-paper-receives-journal-of-mechanical-design-award/}{best paper}} award by the ASME Journal of Mechanical Design in 2021.\\
+	\textsc{Tools:} \programlang{\color{python}}{Python}~\programlang{\color{matlab}}{MATLAB}~\round{\href{https://github.com/khbalhandawi/DM_SBD_opt}{\small\faGlobe~Open-source code}}{proglang}~\round{\href{https://scale-am.herokuapp.com/}{\small\faGlobe~Web application}}{proglang}
+}
+{spaceafter}  % Description
 
 %------------------------------------------------
 
-\workposition{Summer 2017, 2018, 2019} % Duration
-{PT} % FT/PT (full time or part time)
-{GKN Aerospace Engine Systems} % Employer
-{Visiting researcher} % Job title
+\workposition{Sep 2021 -- Dec 2021} % Duration
+{} % FT/PT (full time or part time)
+{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
+{G\"{o}teborg, Sweden} % Location
+{Postdoctoral Researcher} % Job title
 {
-	$\bullet$ Transfer academic research to the industry by providing training and workshops.\\
-	$\bullet$ Collect information about industrial workflows to guide academic research.
-}  % Description
+	$\bullet$ Research change propagation and absorption in engineering design (applied to aeroengines).\\
+	$\bullet$ Author a \href{https://sed-group.github.io/mvmlib/index.html}{Python library} for margin and change propagation management in engineering systems.\\
+	$\bullet$ Used said library in design space exploration to concurrently develop and analyze \textbf{6,552 conceptual designs} of an aeroengine component and \href{https://khbalhandawi.github.io/projects/1_project/}{visualize the results} using interactive tools.\\
+	\textsc{Tools:} \programlang{\color{python}}{Python}~\round{\href{https://sed-group.github.io/mvmlib/}{\small\faGlobe~Library}}{proglang}
+}
+{} % Description
 
 %------------------------------------------------
 
-\vspace{-\baselineskip} % Standardise the whitespace after this section and before the next (the custom command adds too much otherwise)
+% \vspace{-\baselineskip} % Standardise the whitespace after this section and before the next (the custom command adds too much otherwise)
 
 %----------------------------------------------------------------------------------------
 %	COMPUTER SKILLS
@@ -336,10 +354,13 @@ $\bullet$ Technology transfer at GKN aerospace to help \textbf{shorten product l
 \section{Skills}
 
 \begin{supertabular}{>{\raggedleft\arraybackslash}p{0.3\columnwidth}@{\hspace{0.5\tabcolsep}}c>{\raggedright\arraybackslash}p{0.6\columnwidth}} % Start a table with three columns, the table will ensure everything is aligned
-	\tableentrythree{Operating systems}{\faDesktop}{\faWindows ~~~\faLinux ~~~\faApple}{spaceafter}
-	\tableentrythree{Scientific libraries}{\faCogs}{Qt, PyTorch, CUDA, Eigen, dlib}{spaceafter}
-	\tableentrythree{Source control}{\faCodeFork}{Git, Perforce}{spaceafter}
-	\tableentrythree{Interactive development environments}{\faListAlt}{VSCode, Xcode, Visual Studio}{spaceafter}
+	% \tableentrythree{Operating systems}{\faDesktop}{\faWindows ~~~\faLinux ~~~\faApple}{}
+	\tableentrythree{Scientific libraries}{\faCogs}{Qt, PyTorch, CUDA, Eigen, dlib}{}
+	\tableentrythree{Source control}{\faCodeFork}{Git, Perforce}{}
+	% \tableentrythree{IDEs}{\faListAlt}{VSCode, Xcode, Visual Studio}{spaceafter}
+	\tableentrythree{Computer aided design}{\faCube}{SOLIDWORKS, NX siemens}{}
+	\tableentrythree{Finite element software}{\faTh}{Ansys-APDL, Abaqus, NASTRAN}{}
+	\tableentrythree{CFD Software}{\faSpaceShuttle}{Ansys Fluent (basic usage)}{}
 \end{supertabular}
 
 %------------------------------------------------
@@ -359,8 +380,8 @@ $\bullet$ Technology transfer at GKN aerospace to help \textbf{shorten product l
 		\tableentry{\faDatabase}{\textsc{Data manipulation}}{spaceafter}
 		\tableentry{Python}{\skilllevel{Visualization}{5}}{}
 		\tableentry{}{\skilllevel{Data mining}{3}}{}
-		\tableentry{}{\skilllevel{Machine learning}{4}}{}
-		\tableentry{Matlab}{\skilllevel{Transfer learning}{2}}{}
+		\tableentry{}{\skilllevel{Machine learning}{3}}{}
+		\tableentry{Matlab}{\skilllevel{Transfer learning}{1}}{}
 		\tableentry{}{\skilllevel{Simulink}{5}}{}
 
 		%------------------------------------------------
@@ -377,10 +398,10 @@ $\bullet$ Technology transfer at GKN aerospace to help \textbf{shorten product l
 
 		%------------------------------------------------
 		\tableentry{\faCode}{\textsc{Software and HPC}}{spaceafter}
-		\tableentry{C++}{\skilllevel{OOP}{5}}{}
+		\tableentry{C++}{\skilllevel{OOP}{3}}{}
 		\tableentry{}{\skilllevel{User interface}{3}}{}
 		\tableentry{}{\skilllevel{Parallel processing}{3}}{}
-		\tableentry{}{\skilllevel{GPU computing}{4}}{}
+		\tableentry{}{\skilllevel{GPU computing}{2}}{}
 		\tableentry{}{\skilllevel{Image processing}{3}}{}
 		%------------------------------------------------
 	
@@ -396,11 +417,11 @@ $\bullet$ Technology transfer at GKN aerospace to help \textbf{shorten product l
 
 %------------------------------------------------
 
-\begin{supertabular}{>{\raggedleft\arraybackslash}p{0.3\columnwidth}@{\hspace{0.5\tabcolsep}}c>{\raggedright\arraybackslash}p{0.6\columnwidth}} % Start a table with three columns, the table will ensure everything is aligned
-	\tableentrythree{Spoken Languages}{\faCommentO}{English (Fluent), Arabic (Fluent), French (Basic)}{spaceafter}
+\begin{supertabular}{>{\raggedleft\arraybackslash}p{0.3\columnwidth}@{\hspace{0.5\tabcolsep}}c>{\raggedright\arraybackslash}p{0.7\columnwidth}} % Start a table with three columns, the table will ensure everything is aligned
+	\tableentrythree{Spoken Languages}{\faCommentO}{English (Fluent), Arabic (Fluent), French (Basic)}{}
 	\tableentrythree{Communication skills}{\faUsers}{Excellent written and verbal presentation skills.}{}
 	\tableentrythree{}{}{Data analysis, proposal writing, and questionnaire design.}{}
-	\tableentrythree{Interpersonal skills}{\faCommentsO}{Love working with others as a team, learning from them, and teaching others.}{}
+	\tableentrythree{Interpersonal skills}{\faCommentsO}{Love working as a team, learning from, and teaching others.}{}
 \end{supertabular}
 
 \let\clearpage\relax % remove final blank page
