--- a/structure.tex
+++ b/structure.tex
@@ -97,6 +97,7 @@ SmallCapsFont=*-SC.ttf
 \definecolor{cuda}{HTML}{3A4E3A}
 \definecolor{rpackage}{HTML}{198CE7}
 \definecolor{qt}{HTML}{3D6117}
+\definecolor{mySQL}{HTML}{BF98E7}
 \definecolor{skillcolor}{HTML}{BF656E}
 
 % Other colour options: shade=B9D7D9 and linkcolor=A40000; shade=D4D7FE and linkcolor=FF0080
@@ -140,13 +141,28 @@ SmallCapsFont=*-SC.ttf
 %----------------------------------------------------------------------------------------
 
 % Command for entering a new work position
-\newcommand{\workposition}[5]{
-	{\expandafter\ifstrequal\expandafter{#3}{}{}{{\raggedright\large #3}}} % Employer
-	\hfill
-	{\raggedleft\textsc{#1\expandafter\ifstrequal\expandafter{#2}{}{}{\hspace{2pt}\footnotesize{(#2)}}}\par} % Duration and conditional full time/part time text
-	\expandafter\ifstrequal\expandafter{#4}{}{}{{\raggedright\large\textit{\textbf{#4}}}\\[4pt]} % Job title
-	\expandafter\ifstrequal\expandafter{#5}{}{}{#5\\} % Description
+% \newcommand{\workposition}[5]{
+% 	{\expandafter\ifstrequal\expandafter{#3}{}{}{{\raggedright\large #3}}} % Employer
+% 	\hfill
+% 	{\raggedleft\textsc{#1\expandafter\ifstrequal\expandafter{#2}{}{}{\hspace{2pt}\footnotesize{(#2)}}}\par} % Duration and conditional full time/part time text
+% 	\expandafter\ifstrequal\expandafter{#4}{}{}{{\raggedright\large\textit{\textbf{#4}}}\\[4pt]} % Job title
+% 	\expandafter\ifstrequal\expandafter{#5}{}{}{#5\\} % Description
+% }
+\newcommand{\workposition}[7]{
+	\expandafter\ifstrequal\expandafter{#3}{}{}{\textbf{#3}} % Employer
+	\expandafter\ifstrequal\expandafter{#4}{}{}{\hfill {\raggedright\textsc{#4}}} % Location
+	\expandafter\ifstrequal\expandafter{#3#4}{}{}{\\}
+	\expandafter\ifstrequal\expandafter{#5}{}{}{{\textit{{#5}}}} % Job title
+	\textsc{
+		\hfill
+		\expandafter\ifstrequal\expandafter{#1}{}{}{#1}
+		\expandafter\ifstrequal\expandafter{#2}{}{}{\hspace{6pt}\footnotesize{(#2)}}
+	} % Duration and conditional full time/part time text
+	\expandafter\ifstrequal\expandafter{#1}{}{\\[-10pt]}{\\[2pt]}
+	\expandafter\ifstrequal\expandafter{#6}{}{}{#6} % Description
+	\expandafter\ifstrequal\expandafter{#7}{}{}{\\[6pt]}
 }
+
 
 % Command for entering a separate qualification
 \newcommand{\educationentry}[5]{
@@ -398,7 +414,7 @@ SmallCapsFont=*-SC.ttf
 		%------------------------------------------------
 
 		\ifthenelse{\equal{\additional}{}}{}{
-			\profilesection{Research experience}\\
+			\profilesection{Profile}\\
 			\additional
 		}
 
