final edits for concordia application

--- a/structure.tex
+++ b/structure.tex
@@ -280,6 +280,11 @@ SmallCapsFont=*-SC.ttf
 \newcommand{\cvjobtitle}[1]{\renewcommand{\cvjobtitle}{#1}}
 \newcommand{\cvgithub}[1]{\renewcommand{\cvgithub}{#1}}
 \newcommand{\cvlinkedin}[1]{\renewcommand{\cvlinkedin}{#1}}
+\newcommand{\cvdescribe}[1]{\renewcommand{\cvdescribe}{#1}}
+\newcommand{\cvskills}[1]{\renewcommand{\cvskills}{#1}}
+\newcommand{\cvhobbies}[1]{\renewcommand{\cvhobbies}{#1}}
+\newcommand{\cvreferences}[1]{\renewcommand{\cvreferences}{#1}}
+\newcommand{\cvcourses}[1]{\renewcommand{\cvcourses}{#1}}
 
 % Command to create the rounded boxes around the first three letters of section titles
 \newcommand*\round[2]{%
