NRC cover letter

--- a/structure_semi.tex
+++ b/structure_semi.tex
@@ -83,7 +83,7 @@
 	Scale=0.95,
     ]{Latin Modern Roman}
 
-\newfontfamily\cvlangfont{Courier New} % Create a new font family for programming languages
+\newfontfamily\cvlangfont{DejaVu Sans} % Create a new font family for programming languages
 
 \newfontfamily{\FA}[Path=fonts/]{FontAwesome} % Create a new font family for FontAwesome icons, provided with the template in the fonts folder
 \input{fonts/fontawesomesymbols-xeluatex.tex} % Load a file to create shortcuts to the icons, see icon examples and their shortcuts in fontawesome.pdf in the fonts folder
